@@ -19,7 +19,6 @@ import com.google.inject.Binder;
 import com.google.inject.Key;
 import com.google.inject.Module;
 import com.google.inject.Scopes;
-import com.google.inject.multibindings.Multibinder;
 import io.airlift.discovery.client.AnnouncementHttpServerInfo;
 import io.airlift.http.server.HttpServer;
 import io.airlift.http.server.HttpServerConfig;
@@ -28,6 +27,9 @@ import io.airlift.http.server.LocalAnnouncementHttpServerInfo;
 import io.airlift.http.server.TheServlet;
 
 import javax.servlet.Filter;
+
+import static com.google.inject.multibindings.Multibinder.newSetBinder;
+import static io.airlift.http.server.HttpServerBinder.HttpResourceBinding;
 
 public class TestingHttpServerModule
         implements Module
@@ -45,7 +47,8 @@ public class TestingHttpServerModule
         binder.bind(HttpServerInfo.class).in(Scopes.SINGLETON);
         binder.bind(TestingHttpServer.class).in(Scopes.SINGLETON);
         binder.bind(HttpServer.class).to(Key.get(TestingHttpServer.class));
-        Multibinder.newSetBinder(binder, Filter.class, TheServlet.class);
+        newSetBinder(binder, Filter.class, TheServlet.class);
+        newSetBinder(binder, HttpResourceBinding.class, TheServlet.class);
         binder.bind(AnnouncementHttpServerInfo.class).to(LocalAnnouncementHttpServerInfo.class);
     }
 }
